Fix bug causing running time to be wrong when pausing torrents

BUG: 271521